--- a/group_vars/all/dokuwiki.yml
+++ b/group_vars/all/dokuwiki.yml
@@ -81,7 +81,9 @@ dokuwiki_additonal_configuration:
     value: |
       'Ab dem 21.10.2020 ist der Login nur noch über Keycloak möglich. Bis dahin müssen alle bestehenden Accounts umgezogen werden.
   
-      Erstellt euch dafür einen Account auf [[https://sso.chaos.jetzt]], meldet euch mit euren alten Zugangsdaten hier an, navigiert in euer **Benutzerprofil** und aktiviert unter **Mit anderen Services anmelden:** Keycloak. Ab dann könnt ihr euch mit Keycloak anmelden.'
+      Erstellt euch dafür einen Account auf [[https://sso.chaos.jetzt]], meldet euch mit euren alten Zugangsdaten hier an, navigiert in euer **Benutzerprofil** und aktiviert unter **Mit anderen Services anmelden:** Keycloak. Ab dann könnt ihr euch mit Keycloak anmelden.
+
+      Hierzu muss allerdings der Wiki-Account die selbe E-Mail wie dein SSO-Account haben.'
 #  - name: "plugin>oauth>singleService"
 #    value: "'Keycloak'"
 
