enable sso for synapse

--- a/group_vars/all/matrix.yml
+++ b/group_vars/all/matrix.yml
@@ -14,6 +14,8 @@ synapse_enable_registration: true
 synapse_domain: "{{ base_url }}"
 synapse_server_fqdn_matrix: "matrix.{{ synapse_domain }}"
 synapse_pip_version: "1.21.2"
+synapse_pip_packages_additional:
+  - "git+https://github.com/chaos-jetzt/matrix-synapse-saml-mapper"
 synapse_auto_join_rooms:
   - "#grosse_halle:{{ base_url }}"
   - "#allgemein:{{ base_url }}"
@@ -24,9 +26,28 @@ synapse_email_smtp_user: "{{ lookup('passwordstore', 'infra/mail subkey=user') }
 synapse_email_smtp_password: "{{ lookup('passwordstore', 'infra/mail') }}"
 synapse_email_smtp_require_transport_security: no
 synapse_email_client_base_url: "https://chat.{{ base_url }}"
+synapse_password_config_enabled: false
+synapse_enable_registration: false
 
 synapse_http_listener_port: '85'
-synapse_federation_listener_port: '86'
+synapse_http_listener_enabled: false
+synapse_federation_listener_enabled: false
+synapse_metrics_enabled: true
+synapse_additional_listeners: |
+  # Unsecure HTTP listener (Client API): for when matrix traffic passes through a reverse proxy
+  # that unwraps TLS.
+  - port: {{ synapse_http_listener_port }}
+    tls: false
+    bind_addresses: ['::1', '127.0.0.1']
+    type: http
+    x_forwarded: true
+    resources:
+      - names: [client,federation,metrics]
+        compress: false
+    additional_resources:
+      "/_matrix/saml2/pick_username":
+        module: "matrix_synapse_saml_mapper.pick_username_resource"
+
 
 synapse_app_service_config_files:
   - /etc/matrix-appservice-irc/appservice-registration-irc.yaml
@@ -37,6 +58,22 @@ synapse_turn_uris:
 
 synapse_turn_shared_secret: "{{ coturn_static_auth_secret }}"
 synapse_turn_allow_guests: True
+
+synapse_homeserver_config_extra_options: |
+  user_directory:
+    enabled: true
+    search_all_users: true
+  saml2_config:
+    enabled: true
+    sp_config:
+      metadata:
+        remote:
+          - url: {{ sso_base_url }}/protocol/saml/descriptor
+    user_mapping_provider:
+      module: "matrix_synapse_saml_mapper.SamlMappingProvider"
+  sso:
+    client_whitelist:
+      - "https://chat.{{ base_url }}/"
 
 # Riot
 riot_installation_path: "/var/www/riot-web"
