--- a/templates/traefik/dynamic/synapse.yml
+++ b/templates/traefik/dynamic/synapse.yml
@@ -18,4 +18,4 @@ http:
     synapse-app:
       loadBalancer:
         servers:
-          - url: "http://{{ ansible_fqdn }}:85"
+          - url: "http://localhost:85"
