--- a/group_vars/all/traefik.yml
+++ b/group_vars/all/traefik.yml
@@ -19,6 +19,4 @@ traefik_middlewares_dashboard_authentication:
     - "simeon:$apr1$c7/V5Mhy$vzozg29TxnYXfzZ1deqm1/"
     - "em0lar:$apr1$h8hfBKva$F/yHCivbn8V3tIahYaNQE/"
     - "e1mo:$apr1$3Wq5CWcc$qpJ6NcCwVGoiGOfc1rclT0"
-
-traefik_dynamic_config_files_paths:
-  - "../templates/traefik/dynamic/*"
+traefik_dynamic_config_files_paths: "[{% for group in groups %}'../templates/traefik/dynamic/{{ group }}/*',{% endfor %}]"
