--- a/group_vars/all/keycloak.yml
+++ b/group_vars/all/keycloak.yml
@@ -4,6 +4,7 @@ keycloak_postgresql_database: "keycloak"
 
 keycloak_configure_firewall: false
 keycloak_external_url: "sso.{{ base_url }}"
+keycloak_bind_address: 127.0.0.1
 keycloak_http_port: 8081
 keycloak_welcome_theme: "cj-keycloak-theme"
 keycloak_profile_preview: true
