--- a/templates/traefik/dynamic/web/dokuwiki.yml
+++ b/templates/traefik/dynamic/web/dokuwiki.yml
@@ -18,4 +18,4 @@ http:
     dokuwiki-app:
       loadBalancer:
         servers:
-          - url: "http://{{ ansible_fqdn }}:82"
+          - url: "http://127.0.0.1:82"
