--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -18,11 +18,6 @@
       notify: restart systemd-journald
   tags: base
 
-- hosts: web
-  roles:
-    - firewalld
-  tags: firewall
-
 - hosts: web,matrix
   roles:
     - em0lar.traefik
@@ -74,8 +69,8 @@
 
 - hosts: web
   roles:
-    - geerlingguy.java
-    - em0lar.keycloak
+#    - geerlingguy.java
+#    - em0lar.keycloak
     - mrlesmithjr.openldap
   tasks:
     - name: deploy custom keycloak-theme
