Issue SSL cert for pretix. and tickets.
Before merging #49 needs to be discussed, it would close #49

--- a/templates/traefik/dynamic/web/pretix.yml
+++ b/templates/traefik/dynamic/web/pretix.yml
@@ -1,14 +1,14 @@
 http:
   routers:
     pretix_http:
-      rule: "Host(`pretix.{{ base_url }}`)"
+      rule: "Host(`pretix.{{ base_url }}`) || Host(`tickets.{{ base_url }}`)"
       service: "pretix-app@file"
       entryPoints:
         - "http"
       middlewares:
         - "https_redirect"
     pretix_https:
-      rule: "Host(`pretix.{{ base_url }}`)"
+      rule: "Host(`pretix.{{ base_url }}`) || Host(`tickets.{{ base_url }}`)"
       service: "pretix-app@file"
       entryPoints:
         - "https"
