Update most services to current versions
- Freescout: 1.6.7 -> 1.7.4
- Matrix Synapse: 1.24.0 -> 1.32.2
- Pretix: 3.12.0 -> 3.18.0
- Traefik: v2.3.2 -> v3.4.8

Also removed monitoring endpoints for keycloak and matrix synapse
introduced in 8497a02 and 48c94fb.

TODO:

- [ ] Update they keycloak role (@em0lar)
      In [6faa9a0] some breaking changes where introduced, requiring a
      update of our playbook.
- [ ] Ensure there are no breaking changes by these huge versions
      @em0lar @n0emis you know a bit more about matrix, do you know of
      any possibly breaking changes there?

[6faa9a0]: https://github.com/em0lar/ansible-role-keycloak-postgres/commit/6faa9a0fb5f7681a30d95f3123e2f7c97f1d84f2

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,7 +33,7 @@
 	url = https://github.com/em0lar/ansible-role-traefik.git
 [submodule "roles/em0lar.oh-my-zsh"]
 	path = roles/em0lar.oh-my-zsh
-	url = https://git.labcode.dev/ansible_roles/oh-my-zsh.git
+	url = https://git.em0lar.dev/ansible_roles/oh-my-zsh.git
 [submodule "roles/systemli.coturn"]
 	path = roles/systemli.coturn
 	url = https://github.com/systemli/ansible-role-coturn
