Second round of updates
This time it's tested on the dev machine and some bugs were fixed.

--- a/group_vars/all/base.yml
+++ b/group_vars/all/base.yml
@@ -1,9 +1,9 @@
 users:
-  - username: "root"
-    state: present
-    sudo: yes
-    shell: "/bin/zsh"
-    oh_my_zsh: yes
+  #  - username: "root"
+  #    state: present
+  #    sudo: yes
+  #    shell: "/bin/zsh"
+  #    oh_my_zsh: yes
 
   - username: "n0emis"
     state: present
