--- a/roles/riot-web/tasks/main.yml
+++ b/roles/riot-web/tasks/main.yml
@@ -1,24 +1,24 @@
-- name: Create installation directory for Riot Web
+- name: Create installation directory for Element Web
   file:
-    path: "{{ riot_installation_path }}"
+    path: "{{ element_web_installation_path }}"
     state: directory
     owner: www-data
     group: www-data
     mode: 0755
 
-- name: Download and unarchive Riot Web
+- name: Download and unarchive Element Web
   unarchive:
     remote_src: yes
-    src: https://github.com/vector-im/riot-web/releases/download/v{{ riot_version }}/riot-v{{ riot_version }}.tar.gz
+    src: "https://github.com/vector-im/element-web/releases/download/v{{ element_web_version }}/element-v{{ element_web_version }}.tar.gz"
     extra_opts: --strip-components=1
-    dest: "{{ riot_installation_path }}"
+    dest: "{{ element_web_installation_path }}"
     owner: www-data
     group: www-data
 
-- name: Create Riot custom configuration
+- name: Create Element custom configuration
   template:
     src: config.json.j2
-    dest: "{{ riot_installation_path }}/config.json"
+    dest: "{{ element_web_installation_path }}/config.json"
     owner: root
     group: root
     mode: 0664
