--- a/roles/website/tasks/main.yml
+++ b/roles/website/tasks/main.yml
@@ -1,10 +1,37 @@
 ---
+- name: check if old website is still present
+  lineinfile:
+    path: '{{ website_path }}/.git/config'
+    regexp: 'url = https://github\.com/chaos-jetzt/jetztstatic'
+    state: absent
+  check_mode: yes
+  register: website_old_present
+
+
+- name: delete old website if present
+  file:
+    state: absent
+    path: '{{ website_path }}'
+  when: 'website_old_present.found | default(false)'
+
 - name: clone website repository
   git:
-    repo: 'https://github.com/chaos-jetzt/jetztstatic/'
-    dest: /var/www/website
+    repo: '{{ website_repo }}'
+    dest: '{{ website_path }}'
+    version: '{{ website_version }}'
     clone: yes
     update: yes
+  register: website_changed
+
+- name: install pip requirements for website
+  pip:
+    requirements: '{{ website_path }}/requirements.txt'
+
+- name: make html on website
+  make:
+    target: html
+    chdir: '{{ website_path }}'
+  when: website_changed.changed
 
 - name: Ensure well-known matrix dir exists
   file:
