Initial prometheus alertmanager setup
The two hosts will monitor each other using prometheus. There is only a
short retention period and no grafana setup since this will A save on
storage / resources (of which our supply is not unlimited) and B I don't
see any value (for us) we could get out of long term metrics.

I optet not to export special Matrix or Keycloak metrics, mainly due to
simplicity. The health of these services is simply being monitored by
looking at the share of http response codes. Together with a check for
our hosts being up, the disks not being full and no systemd services
crashing this should cover all of the outages we've had so far.

Close #9

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,12 @@
 [submodule "roles/chaos_jetzt.venueless"]
 	path = roles/chaos_jetzt.venueless
 	url = https://github.com/chaos-jetzt/ansible-role-venueless
+[submodule "roles/cloudalchemy.node-exporter"]
+	path = roles/cloudalchemy.node-exporter
+	url = https://github.com/cloudalchemy/ansible-node-exporter
+[submodule "roles/cloudalchemy.prometheus"]
+	path = roles/cloudalchemy.prometheus
+	url = https://github.com/cloudalchemy/ansible-prometheus
+[submodule "roles/cloudalchemy.alertmanager"]
+	path = roles/cloudalchemy.alertmanager
+	url = https://github.com/cloudalchemy/ansible-alertmanager
