Add E-Mail for @n0emis

--- a/group_vars/all/prometheus.yml
+++ b/group_vars/all/prometheus.yml
@@ -60,6 +60,8 @@ alertmanager_receivers:
         send_resolved: true
       - to: 'cj@leona.is'
         send_resolved: true
+      - to: "cj-mon@n0emis.eu"
+        send_resolved: true
 
 alertmanager_route:
   group_by: ['alertname', 'instance', 'service']
