--- a/group_vars/all/prometheus.yml
+++ b/group_vars/all/prometheus.yml
@@ -25,8 +25,7 @@ prometheus_config_flags_extra:
   web.route-prefix: /
 
 prometheus_alertmanager_config:
-  - path_prefix: "/alertmanager"
-    scheme: "http"
+  - scheme: "http"
     static_configs:
       - targets:
           - "{{ monitoring_own_ip }}:9093"
