--- a/group_vars/all/freescout.yml
+++ b/group_vars/all/freescout.yml
@@ -1,8 +1,8 @@
 ---
 freescout_url: "support.{{ base_url }}"
-freescout_db_database: "freescout"
-freescout_db_username: "{{ lookup('passwordstore', 'infra/freescout/db subkey=user') }}"
-freescout_db_password: "{{ lookup('passwordstore', 'infra/freescout/db') }}"
+freescout_db_database: "freescout_old"
+freescout_db_username: "{{ lookup('passwordstore', 'infra/freescout/db subkey=user') }}_invalid"
+freescout_db_password: "{{ lookup('passwordstore', 'infra/freescout/db') }}-not-working"
 
 freescout_admin_user:
   email: info@chaos.jetzt
